# jabs

./: .gitignore  Makefile  README.md  debian.py  dockertests.py  example.crontab  jabs-btrfs.cfg  jabs-proxmox.cfg  jabs-proxmox.py  jabs-snapshot.cfg  jabs-snapshot.py  jabs.cfg  jabs.py  pyproject.toml  setup.py  tests.py
jabs/: __init__.py  btrfs.py  config.py  consts.py  jabs.py  proxmox.py  snapshot.py  sync.py
