[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jabs"
version = "1.8"
authors = [
	{ name="Gabriele Tozzi", email="gabriele@tozzi.eu" },
]
description = "This is a simple and powerful rsync-based backup script."
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
	"Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/gtozzi/jabs"
Issues = "https://github.com/gtozzi/jabs/issues"
